<resources>
    <string name="app_name">Chat Quiz Room</string>

    <string name="guest_list_dialog_guest_participant">Participants in this room:</string>
    <string name="guest_list_only_two_participants">There are only you and the host in this room.</string>

    <string name="chat_connect_room_title">Connect to a Chat Room</string>
    <string name="chat_connect_search">Searching for available chat rooms&#8230;</string>
    <string name="chat_host_room_title">%s: Hosting a Chat-Room</string>
    <string name="chat_guest_list_room_host">Chat-room host: %s</string>
    <string name="chat_room_title">%s Chat-Room</string>
    <string name="chat_message_input_hint">Enter message to send</string>
    <string name="chat_message_image_loading">The image is loading&#8230;</string>
    <string name="chat_message_image_loading_error">There was an error while loading the image</string>
    <string name="chat_main_language_title">Language: %s</string>
    <string name="chat_main_topic_title">Topic: %s</string>

    <string name="quiz_connect_room_title">Connect to a Quiz Room</string>
    <string name="quiz_connect_search">Searching for available quiz rooms&#8230;</string>
    <string name="quiz_host_room_title">%s: Hosting a Quiz-Room</string>
    <string name="quiz_winner_text_others">This round winner is: %s responded in %s %s!</string>
    <string name="quiz_winner_text_winner">Congratulations you won, you responded in %s %s!</string>
    <string name="quiz_winner_text_no_winner">There are no winners for this round!</string>
    <string name="quiz_guest_list_room_host">Quiz-room host: %s</string>
    <string name="quiz_room_title">%s Quiz-Room</string>
    <string name="quiz_answer_waiting">Waiting for the host to post a question&#8230;</string>
    <string name="quiz_answer_responded">You submitted your answer!\nWaiting for other players to respond&#8230;</string>
    <string name="quiz_points_list">%s currently has %s %s</string>
    <string name="quiz_points">Points:\n%s</string>
    <string name="quiz_input_question">Insert the question</string>
    <string name="quiz_duration">Duration</string>
    <string name="quiz_input_answer_a">Answer A</string>
    <string name="quiz_input_answer_b">Answer B</string>
    <string name="quiz_input_answer_c">Answer C</string>
    <string name="quiz_input_answer_d">Answer D</string>

    <plurals name="points">
        <item quantity="one">point</item>
        <item quantity="other">points</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">second</item>
        <item quantity="other">seconds</item>
    </plurals>

    <string name="dialog_request_title">Join request</string>
    <string name="dialog_request_description">%s  wants to join your room!</string>
    <string name="dialog_request_accept">Accept</string>
    <string name="dialog_request_reject">Reject</string>

    <string name="lobby_empty_username">Please insert an username!</string>
    <string name="lobby_invalid_username">Please insert a valid username!</string>
    <string name="lobby_nickname_hint">Enter your nickname</string>
    <string name="lobby_chat_room">Chat</string>
    <string name="lobby_chat_room_join">Join a chat room</string>
    <string name="lobby_chat_room_host">Host a chat room</string>
    <string name="lobby_quiz_room">Quiz</string>
    <string name="lobby_quiz_room_join">Join a quiz room</string>
    <string name="lobby_quiz_room_host">Host a quiz room</string>
    <string name="lobby_color_pick">Pick your color</string>

    <string name="dialog_color_confirm">OK</string>
    <string name="dialog_color_cancel">Cancel</string>
    <string name="dialog_color_title">Pick your color</string>
    <string name="dialog_color_name">#%s</string>

    <string name="permission_denied">A permission was denied</string>
    <string name="connection_ended">You have been disconnected.</string>
    <string name="image_recognize_none">Could not recognize any object in this image.</string>
    <string name="image_recognize_found">Found:</string>
    <string name="image_recognize_error">Error:</string>
    <string name="image_recognize_error_description">An error appeared while analysing the image.</string>
    <string name="image_recognize_prompt">Do you want the API to describe the picture?</string>
    <string name="image_recognize_accept">Yes</string>
    <string name="image_recognize_cancel">Cancel</string>

    <array name="chat_colors">
        <item name="chat_color_1">#a7c0cd</item>
        <item name="chat_color_2">#b085f5</item>
        <item name="chat_color_3">#80d6ff</item>
        <item name="chat_color_4">#6ff9ff</item>
        <item name="chat_color_5">#26a69a</item>
        <item name="chat_color_6">#9ccc65</item>
        <item name="chat_color_7">#ffff8b</item>
        <item name="chat_color_8">#ffd95b</item>
        <item name="chat_color_9">#ffa270</item>
        <item name="chat_color_10">#ff867c</item>
        <item name="chat_color_11">#be9c91</item>
        <item name="chat_color_12">#ff77a9</item>
    </array>

</resources>
