<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.motion.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_bg"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/lobby_logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/ic_launcher_img"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/lobby_user_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/lobby_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lobby_nickname_hint"
        android:gravity="center"
        android:maxLength="20"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lobby_logo"
        app:layout_constraintBottom_toTopOf="@+id/lobby_layout"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/lobby_user_name_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/lobby_user_name"
        tools:text="Insert a correct name" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lobby_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginBottom="8dp"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_user_name"
        tools:visibility="visible">

        <android.support.v7.widget.CardView
            android:id="@+id/lobby_chat_layout"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:cardCornerRadius="23dp"
            app:cardBackgroundColor="@color/color_accent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/lobby_chat_join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/color_white"
                    android:textAllCaps="false"
                    android:padding="15dp"
                    android:includeFontPadding="false"
                    android:text="@string/lobby_chat_room_join"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/lobby_chat_title"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/lobby_chat_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/color_white"
                    android:textAllCaps="false"
                    android:padding="15dp"
                    android:includeFontPadding="false"
                    android:text="@string/lobby_chat_room_host"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lobby_chat_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/lobby_chat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:minWidth="60dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/color_white"
                    android:textAllCaps="true"
                    android:background="@color/color_primary"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:elevation="10dp"
                    android:clickable="false"
                    android:includeFontPadding="false"
                    android:text="@string/lobby_chat_room"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/lobby_quiz_layout"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:cardCornerRadius="23dp"
            app:cardBackgroundColor="@color/color_accent"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/lobby_chat_layout">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/lobby_quiz_join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/color_white"
                    android:textAllCaps="false"
                    android:padding="15dp"
                    android:includeFontPadding="false"
                    android:text="@string/lobby_quiz_room_join"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/lobby_quiz_title" />


                <TextView
                    android:id="@+id/lobby_quiz_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/color_white"
                    android:textAllCaps="false"
                    android:padding="15dp"
                    android:includeFontPadding="false"
                    android:text="@string/lobby_quiz_room_host"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lobby_quiz_title"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/lobby_quiz_title"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:minWidth="60dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/color_white"
                    android:textAllCaps="true"
                    android:background="@color/color_primary"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:elevation="10dp"
                    android:clickable="false"
                    android:includeFontPadding="false"
                    android:text="@string/lobby_quiz_room"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/lobby_color_select"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/color_primary"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lobby_quiz_layout" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/color_white"
                android:textAllCaps="false"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:includeFontPadding="false"
                android:text="@string/lobby_color_pick" />

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>




</android.support.constraint.motion.MotionLayout>