<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_bg"
    android:animateLayoutChanges="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/host_quiz_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/host_quiz_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:title="@string/quiz_host_room_title"
            android:minHeight="?android:attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/quiz_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:stackFromEnd="true"
        app:layout_constraintTop_toBottomOf="@+id/host_quiz_toolbar_layout"
        app:layout_constraintBottom_toTopOf="@+id/quiz_form"/>

    <android.support.v7.widget.CardView
        android:id="@+id/quiz_timer_layout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/color_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/quiz_form"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/quiz_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/color_white"
            android:includeFontPadding="false"
            tools:text="60"/>
    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/quiz_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

        <android.support.v7.widget.CardView
            android:id="@+id/quiz_input_question_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/quiz_input_answer_a_layout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/quiz_input_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quiz_input_question"
                android:maxLength="300"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/quiz_input_answer_a_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/quiz_input_answer_c_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/quiz_input_answer_b_layout">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/quiz_input_answer_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="100"
                    android:hint="@string/quiz_input_answer_a"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/quiz_radio_answer_a"/>

                <RadioButton
                    android:id="@+id/quiz_radio_answer_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/quiz_input_answer_a"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/quiz_input_answer_b_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/quiz_input_answer_d_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/quiz_input_answer_a_layout">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/quiz_input_answer_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="100"
                    android:hint="@string/quiz_input_answer_b"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/quiz_radio_answer_b"/>

                <RadioButton
                    android:id="@+id/quiz_radio_answer_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/quiz_input_answer_b"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/quiz_input_answer_c_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/quiz_send"
            app:layout_constraintEnd_toStartOf="@id/quiz_input_answer_d_layout"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/quiz_input_answer_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="100"
                    android:hint="@string/quiz_input_answer_c"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/quiz_radio_answer_c"/>

                <RadioButton
                    android:id="@+id/quiz_radio_answer_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/quiz_input_answer_c"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/quiz_input_answer_d_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/quiz_send"
            app:layout_constraintStart_toEndOf="@id/quiz_input_answer_c_layout"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/quiz_input_answer_d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="100"
                    android:hint="@string/quiz_input_answer_d"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/quiz_radio_answer_d"/>

                <RadioButton
                    android:id="@+id/quiz_radio_answer_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/quiz_input_answer_d"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/quiz_send"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:cardCornerRadius="23dp"
            android:layout_margin="6dp"
            app:cardBackgroundColor="@color/color_accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="2dp"
                android:paddingLeft="2dp"
                android:src="@drawable/ic_send"/>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>