<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/messages_main"
    android:animateLayoutChanges="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/chat_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/chat_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:title="@string/chat_connect_room_title"
            android:minHeight="?android:attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/connection_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/chat_bg"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/chat_connect_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/chat_connect_search"/>


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/connection_content_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/connection_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </android.support.v4.widget.SwipeRefreshLayout>


        <FrameLayout
            android:id="@+id/connection_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/progress_bg"
            android:visibility="gone"
            tools:visibility="visible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/chat_room_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/chat_bg"
        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/chat_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:stackFromEnd="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/chat_input_layout"/>

        <android.support.v7.widget.CardView
            android:id="@+id/chat_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="46dp"
            app:cardCornerRadius="23dp"
            app:cardBackgroundColor="@color/color_message_input_bg"
            android:elevation="5dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/chat_send"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/chat_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:layout_marginRight="60dp"
                android:background="@null"
                android:padding="10dp"
                android:hint="@string/chat_message_input_hint"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/chat_send"
            android:layout_width="60dp"
            android:layout_height="46dp"
            app:cardCornerRadius="23dp"
            app:cardBackgroundColor="@color/color_accent"
            android:elevation="5dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="4dp"
                android:paddingLeft="4dp"
                android:src="@drawable/ic_send"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/chat_add"
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:cardCornerRadius="21dp"
            app:cardBackgroundColor="@color/color_primary"
            android:elevation="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toTopOf="@+id/chat_send"
            app:layout_constraintEnd_toEndOf="parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_gallery"/>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>